# automata-core

./: README.md  setup.cfg
.github/workflows/: release.yml
.scripts/: release_indicator.py
automata/instant/: RunInstantHolder.py
core/exchange/: ExchangeRate.py
core/number/: BigFloat.py
core/trade/: CurrencyTrade.py  CurrencyTradeOrder.py  InstrumentTrade.py  Order.py
tests/core/arguments/: command_line_arguments_test.py
tests/core/environment/: EnvironmentVariables_test.py
tests/core/exchange/: ExchangeRate_test.py  InstrumentExchange_test.py
tests/core/instant/: RunInstantHolder_test.py
tests/core/market/: Market_test.py
tests/core/meta/: MetaInfo_test.py
tests/core/number/: BigFloat_test.py
tests/core/oracle/: Prediction_test.py
tests/core/position/: Position_tests.py
tests/core/trade/: InstrumentTrade_test.py  Order_test.py
tests/core/transform/: Ignore_test.py
tests/instant/: RunInstantHolder_test.py
