[metadata]
name = persuader.technology.automata.core
version = 0.0.6
description = Automata Core
author = Persuader Technology
license = UNLICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:

[options.packages.find]
include = core*
exclude =
    tests
    simulations
    scripts
