[metadata]
name = persuader.technology.automata.core
version = 0.0.5
description = Automata Core
long_description = file: README.md
long_description_content_type = text/markdown
author = Persuader Technology
license = UNLICENSE
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:

[options.packages.find]
include = core*
exclude =
    tests
    simulations
    scripts
